# MilkChanDesktop

./: .gitignore  MilkChan.spec  README.md  build.sh  build_linux.sh  build_windows.bat  install.sh  install_linux.sh  politics_news.py  pyproject.toml  requirements.txt  run.sh  test.json  test_markdown.md
milkchan/: __init__.py  bootstrap.py  main.py  process.py  pyi_rth_qt.py  runtime_env.py  self_install.py  system_deps.py  terminal_chat.py
milkchan/core/: __init__.py  config.py  updater.py
milkchan/custom_tools/: memory.py  take_screenshot.py  update_sprite.py
milkchan/desktop/: app.py
milkchan/desktop/agents/: agent_workers.py
milkchan/desktop/assets/: MILKCHAN.md  mappings.json
milkchan/desktop/services/: ai_client.py  ipc_server.py  memory_client.py  model_fetcher.py  stream_broker.py  stream_client.py
milkchan/desktop/ui/: chat_overlay.py  config_tab.py  settings_window.py  sprite_window.py
milkchan/desktop/utils/: audio_player.py  highlights.py  recorder.py  screen_watcher.py  screenshot.py  sprites.py  vision.py
milkchan/storage/: __init__.py  database.py
tests/: test_bootstrap_paths.py  test_runtime_fixes.py
